# cat-activities-monitor

./: .gitignore  .gitmessage  .versionrc  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  commitlint.config.js  docker-compose.example.yml  docker-compose.yml  package-lock.json  package.json
api/: .dockerignore  .gitignore  Dockerfile  MIGRATION_GUIDE.md  README.md  alembic.ini  config.example.yaml  config.full.yaml  config.minimal.yaml  generate_openapi.py  init.sql  main.py  pyproject.toml  utils.py
api/alembic/: env.py
api/docs/: index.html  openapi.json  openapi.yaml
api/migrations/: env.py
api/ml_pipeline/: __init__.py  base_process.py  contextual_activity_detection.py  feature_extraction.py  pipeline.py  yolo_detection.py
api/ml_training_pipeline/: __init__.py  base_trainer.py  cat_identification_trainer.py  feature_clustering_trainer.py  pipeline.py  yolo_trainer.py
api/models/: __init__.py  cat.py  config.py  db_models.py  detection.py  feedback.py  recognition.py
api/persistence/: __init__.py  models.py
api/routes/: __init__.py  activity_routes.py  camera_routes.py  cat_routes.py  dashboard_routes.py  detection_routes.py  feedback_routes.py  main_routes.py  maintenance_routes.py  system_routes.py  training_routes.py
api/scripts/: README.md  advanced_cat_detection.py  debug_cat_identification.py  manage_migrations.py  test_activity_detection.py  test_feature_extraction.py  test_multi_cat_detection.py  test_yolo.py
api/services/: __init__.py  activity_detection_service.py  cat_identification_service.py  config_service.py  database_service.py  (+6 more)
(+53 files in other folders)
